[gd_scene format=3 uid="uid://dpag4livtkm45"]

[ext_resource type="Script" uid="uid://cpg6gst681j0y" path="res://scripts/client_card_ui_controller.gd" id="1_t5n7w"]
[ext_resource type="Texture2D" uid="uid://rqfflbi8qwm" path="res://assets/ui/icons/devil.png" id="2_iru01"]
[ext_resource type="Texture2D" uid="uid://5ra2v30n3ube" path="res://assets/ui/icons/money.png" id="3_vkgx5"]
[ext_resource type="Texture2D" uid="uid://bjulun4x88ktj" path="res://assets/ui/icons/angel.png" id="5_vkgx5"]
[ext_resource type="Texture2D" uid="uid://bs15w53hutchf" path="res://assets/ui/icons/ring.png" id="6_l8sc5"]
[ext_resource type="Texture2D" uid="uid://bcy7jcp42h2hi" path="res://assets/ui/icons/skull.png" id="6_vkgx5"]
[ext_resource type="Texture2D" uid="uid://qvosn52myxrr" path="res://assets/ui/client_card.png" id="7_card_bg"]
[ext_resource type="Texture2D" uid="uid://cnour076qghf5" path="res://assets/ui/icons/documents/paradise_marriage.png" id="8_doc_preview"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_under"]
bg_color = Color(0.25, 0.25, 0.25, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_fill"]
bg_color = Color(0.4, 0.75, 0.45, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="SceneCard" type="Control" unique_id=1870070890]
custom_minimum_size = Vector2(150, 90)
layout_mode = 3
anchors_preset = 0
offset_right = 150.0
offset_bottom = 90.0
script = ExtResource("1_t5n7w")
type_icons = Dictionary[String, Texture2D]({
"hell": ExtResource("2_iru01"),
"paradise": ExtResource("5_vkgx5")
})
service_icons = Dictionary[String, Texture2D]({
"death": ExtResource("6_vkgx5"),
"inheritance": ExtResource("3_vkgx5"),
"marriage": ExtResource("6_l8sc5")
})

[node name="Background" type="TextureRect" parent="." unique_id=2043660734]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("7_card_bg")
expand_mode = 1
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=2029921051]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1057703991]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 16

[node name="progress_bar" type="ProgressBar" parent="MarginContainer/VBoxContainer" unique_id=2012208705]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_progress_under")
theme_override_styles/fill = SubResource("StyleBoxFlat_progress_fill")
max_value = 5.0
value = 5.0
show_percentage = false

[node name="ContentContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1478902592]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 8

[node name="DocumentPreview" type="TextureRect" parent="MarginContainer/VBoxContainer/ContentContainer" unique_id=1234567890]
custom_minimum_size = Vector2(56, 28)
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.0
mouse_filter = 2
texture = ExtResource("8_doc_preview")
expand_mode = 1
stretch_mode = 5

[node name="icons_container" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ContentContainer" unique_id=1267020967]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 6
alignment = 1

[node name="type_icon" type="TextureRect" parent="MarginContainer/VBoxContainer/ContentContainer/icons_container" unique_id=57999043]
custom_minimum_size = Vector2(22, 22)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
texture = ExtResource("5_vkgx5")
expand_mode = 1
stretch_mode = 5

[node name="service_icon" type="TextureRect" parent="MarginContainer/VBoxContainer/ContentContainer/icons_container" unique_id=1678543695]
custom_minimum_size = Vector2(22, 22)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
texture = ExtResource("6_l8sc5")
expand_mode = 1
stretch_mode = 5

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
